--- a/style.css
+++ b/style.css
@@ -101,11 +101,30 @@ h2{
 .home-text p{
     font-weight: 0.938rem;
     margin: 10px 0 20px;
-    color:rgb(0, 0, 0);
+    color:rgb(173, 173, 173);
 }
 
 .watch-btn{
     display: flex;
     align-items: center;
     column-gap: 0.8rem;
+    color: black;
+}
+
+.watch-btn .bx{
+    font-size: 21px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.watch-btn .bx:hover{
+    background: #ccc;
+}
+
+.watch-btn span{
+
 }
